Add mongoUri to .env configuration

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ Salt=7kR9mNpQ2xWvL5jH8tYbF3nC6sA4dE1g
 LeagueSalt=9zXcVbNmAsQwErTyUiOpLkJhGfDsSaZx
 LeagueLoginSalt=4pL8mK2nB5vC9xZ3qW7eR6tY1uI0oP
 LoginSalt=6hG3fD8sA2qW5eR9tY4uI7oP1aS0dF2j
-mongoUri=
+mongoUri=mongodb+srv://rexzofficial79_db_user:7HwoRCdFu7M7iXYI@stumblebackend.7kuerbg.mongodb.net/?appName=StumbleBackend
 nodeEnv=development
 DISCORD_TOKEN=MTQ2ODk3ODM5NDk0NjYwMTA0Mg.GQZcTh.OoDfzH7zCUqW7sVUM_gkE4YkDRejeIroZXuR_M
 DISCORD_CLIENT_ID=1468978394946601042
